	from an invalid timeline spec string had caused an error.
	(twittering-string-to-timeline-spec): add an optional argument
	NOERROR. If NOERROR is non-nil, the function does not raise an
	error even if SPEC-STR is invalid as a timeline spec string.
	(twittering-equal-string-as-timeline): do not raise an error even
	if either SPEC-STR1 or SPEC-STR2 is invalid as a timeline spec
	string.

2013-03-25  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Decode surrogate pairs in strings returned
	by `json-read'. A new advice is added for decoding surrogate
	pairs.
	A character not in the Basic Multilingual Plane is
	represented by a surrogate pair in JSON (RFC4627). This is similar
	to CESU-8. But the function `json-read' in `json.el' does not
	correctly decode surrogate pairs. `json-read' returns a string
	including invalid code points from U+D800 to U+DFFF.
	`twittering-json-read' now decodes them by using a new advice.
	Thanks to multiSnow who reported the problem.
	(twittering-surrogate-pair-regexp): new constant that matches a
	surrogate pair in CESU-8.
	(twittering-decode-surrogate-pairs-as-cesu-8): new function that
	decodes surrogate pairs in a given string similarly to CESU-8.
	(json-read-string): new advice for decoding surrogate pairs.
	(twittering-json-read): use the new advice for decoding surrogate
	pairs in strings returned by `json-read'.

	* twittering-mode.el: Add `twittering-assoc-string' for
	portability. In Emacs 21, the function `assoc-string' is not
	defined. In such case, the reimplemented version is
	used. Othewise, `twittering-assoc-string' is an alias of
	`assoc-string'.
	(twittering-assoc-string): new function for portability.
	(twittering-get-server-info): replace `assoc-string' with
	`twittering-assoc-string'.

	* twittering-mode.el: Display rate-limit information for each API.
	(twittering-api-limit-info-alist): new variable for storing
	rate-limit information for each API.